app/static/css/home.css
*{
    margin: 0;
    padding: 0;
}

.header{
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: black;
    gap: 5px;
    color: white;
    position: sticky;
    top: 0;
    padding: 2%;
    padding-bottom: 0.1%;
    

    
}

#bars{
    width: 5%;
    font-size: 25px;
    color: rgb(228, 164, 3);
}
.header img{
    width: 50%;
    
}
.secondary-form{
    display:none;
}
.header .top{
    display: flex;
    align-items: center;
    width: 100%;
    gap: 2%;
}

.header .primary-form{
    width: 50%;
    display: flex;
    
}

.header .primary-form input, .header .secondary-form input{
    width: 100%;
    padding: 8px;
    border: 3px solid goldenrod;
    border-right: none;
    outline: none;
    border-radius: 12px 0px 0px 12px;

}
input[type="search"]::-webkit-search-cancel-button {
    cursor: pointer; 
    background-color: red;
   
}
.button-group{
    position: relative;
    background-color: goldenrod;
    padding: 10px;
    cursor: pointer;
    width: 3%;
}

.button-group .search-loader{
    width: 7px;
    height: 7px;
    border-radius: 50%;
    border: 4px solid rgba(85, 83, 77, 0.742);
    border-top: 4px solid white;
    animation:load 1s linear infinite;
    position: absolute;
    display: none;
   
    
    
}

.header i{
    color: white;
    cursor: pointer;
    
}

.header .top ul{
    width: 30%;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    gap: 1%;
    margin-right: -2%;

  
}

.header .top ul .user-in{
    position: relative;
    display: inline-block;
    border-radius: 20px;
    
    border: 3px solid goldenrod;
   
}

.header .top ul .user-in i{
    position: absolute;
    right: 0.6rem;
    
}

.header .top ul .user-in a{
    display: block;
}

.header .top ul li{
    list-style: none;
    cursor: pointer;
    display: block;
    width: 100%;
}

.header .top ul li a{
    text-decoration: none;
    color: white;
}

.header .top ul .counter{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.counted{
    color: goldenrod;
    font-size: 12px;
}







.cards {
    margin:4px 8px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 10px;
}

.card {
    display: flex;
    flex-direction: column;
    flex: 1;
    background: white;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
}

.card img {
    aspect-ratio: 1/1;
    width: 100%;
    object-fit: contain;
    
}

.desc {
    padding: 10px;
    margin-top: auto;
    font-size: smaller;

}

.loader{
    width: 50px;
    height: 50px;
    border-radius: 50%; 
    border: 6px solid #dddddd6f;
    border-top: 6px solid goldenrod;
    animation: load 2s linear infinite;
    display: flex;
    margin:15% auto;
    justify-content: center;

}


@keyframes load{
    from{
        transform: rotate(0deg);
    }

    to{
        transform: rotate(360deg);
    }
}



@keyframes slide{
    0%{
        transform: translateX(-30px);
        
    }
}

@media (max-width: 860px) {
    .header img{
        width: 100%;
    }
    
    .header .primary-form{
        width: 90%;
    }
    .header .top ul{
        width: 50%;
    }
    .cards {
        grid-template-columns: repeat(3, 1fr);
    }
   
    

}

@media (max-width:479px){
    .header img{
        width: 50%;
    }
    .header .top{
        gap: 5%;
    }
    
    .header .primary-form {
        display: none;
    
    }
    .header .secondary-form {
        display: block;
        display: flex;

    }
    .header {
        padding-left: 10px;
    }

    .header .top ul{
        
        width: 50%;
        
    }
    .header .top ul .user-in {
        padding: 5px;
        border: 1px solid goldenrod;
    }

    .counter{
        font-size: large;
    }

    
   
    .cards {
        grid-template-columns: repeat(3, 1fr);
    }

    .desc{
        
        font-size: 40%;
    }

    .loader{
        margin-top: 60%;
    }

}

